WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56630
Pixel tests don't work in WebKitTestRunner on Windows
https://bugs.webkit.org/show_bug.cgi?id=56630
Summary
Pixel tests don't work in WebKitTestRunner on Windows
Adam Roben (:aroben)
Reported
2011-03-18 01:17:15 PDT
Pixel test support isn't implemented in WebKitTestRunner on Windows. We should fix that!
Attachments
WIP patch (won't build on Mac)
(25.25 KB, patch)
2011-03-18 01:18 PDT
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Patch
(39.39 KB, patch)
2011-03-18 12:21 PDT
,
Sam Weinig
aroben
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-03-18 01:18:36 PDT
Created
attachment 86143
[details]
WIP patch (won't build on Mac)
Sam Weinig
Comment 2
2011-03-18 12:21:23 PDT
Created
attachment 86193
[details]
Patch
Sam Weinig
Comment 3
2011-03-18 12:24:11 PDT
Committed
r81494
: <
http://trac.webkit.org/changeset/81494
>
WebKit Review Bot
Comment 4
2011-03-18 12:33:28 PDT
http://trac.webkit.org/changeset/81494
might have broken Windows Release (Build) and Windows Debug (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug